# SoundBoard

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
src/: Logger.cpp  Logger.hpp  Platform.hpp  Platform.windows.cpp  Player.cpp  Player.h  SoundBoard.cpp  SoundBoard.h  UI.cpp  UI.hpp  main.cpp
